--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "dotenv": "^17.2.0",
+    "node-fetch": "^3.3.2",
     "openmeteo": "^1.2.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
