--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "package:win": "npm run build && electron-builder --win nsis"
   },
   "dependencies": {
+    "axios": "^1.10.0",
     "dotenv": "^17.2.0",
     "node-fetch": "^3.3.2",
     "openmeteo": "^1.2.0",
